# multi_dev

./: .gitignore  README.md  pyproject.toml
.github/workflows/: reusable_ci.yml  reusable_deploy.yml  snack-app-pages.yml
bot-smoke/: github-app-bot-smoke-1774607270.md  human-merge-smoke-1774846010.md  human-pr-smoke-1774845930.md  multi-dev-webhook-smoke-1774838925.md
docs/: parallel_dispatch_blueprint.md
src/multi_dev/: crew.py  main.py
src/multi_dev/config/: agents.yaml  tasks.yaml
src/multi_dev/models/: __init__.py  dispatch.py
src/multi_dev/services/: __init__.py  dispatch_state.py
src/multi_dev/templates/cicd/: ci.thin.yml  deploy.thin.yml
src/multi_dev/tools/: __init__.py  cicd_template_tools.py  git_github_tools.py  repo_execution_tools.py  runtime_registry.py
targets/snack-app/: pyproject.toml
targets/snack-app/frontend/: app.js  index.html  styles.css
targets/snack-app/src/snack_app/: __init__.py  app.py  catalog.py
targets/snack-app/tests/: smoke_test.py
tests/: test_parallel_dispatch.py
